# buffa-reflect

./: .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  _typos.toml  cliff.toml
apps/example/: Cargo.toml  build.rs
apps/example/examples/: dynamic_message.rs  json.rs  text_format.rs  view_reflection.rs
apps/example/proto/acme/api/v1/: library.proto
apps/example/src/: lib.rs  main.rs
apps/server/: Cargo.toml
crates/buffa-reflect/: Cargo.toml
crates/buffa-reflect-build/: Cargo.toml
crates/buffa-reflect-build/src/: builder.rs  lib.rs
crates/buffa-reflect-build/tests/: build_buf.rs  build_protoc.rs
crates/buffa-reflect-build/tests/fixtures/proto/acme/api/v1/: user.proto
crates/buffa-reflect-derive/: Cargo.toml
crates/buffa-reflect-derive/src/: lib.rs
crates/buffa-reflect-derive/tests/: ui.rs
crates/buffa-reflect-derive/tests/ui/: bad_attribute_shape.rs  bad_attribute_shape.stderr  both_bindings.rs  both_bindings.stderr  missing_binding.rs  missing_binding.stderr  missing_message_name.rs  missing_message_name.stderr
crates/buffa-reflect/src/: enumeration.rs  error.rs  field.rs  file.rs  lib.rs  message.rs  oneof.rs  pool.rs  pool_build.rs  reflect.rs  service.rs
crates/buffa-reflect/src/dynamic/: defaults.rs  fields.rs  message.rs  message_codec.rs  message_decode.rs  mod.rs  unknown.rs  value.rs
crates/buffa-reflect/src/dynamic/serde/: case.rs  mod.rs
crates/buffa-reflect/src/dynamic/serde/de/: mod.rs  wkt.rs
crates/buffa-reflect/src/dynamic/serde/ser/: mod.rs  wkt.rs
crates/buffa-reflect/src/dynamic/text_format/: format.rs  mod.rs  parse.rs
crates/buffa-reflect/tests/: derive.rs  dynamic.rs  json.rs  runtime.rs  service.rs  text_format.rs
crates/core/: Cargo.toml
docs/: index.md
docs/research/: buffa-architecture.md  gap-analysis.md  index.md  prost-reflect-architecture.md
examples/equivalence/: Cargo.toml
examples/equivalence/proto/acme/equiv/v1/: neighbors.proto  zoo.proto
examples/equivalence/src/: lib.rs  main.rs
examples/equivalence/tests/: equivalence.rs
examples/grpc-reflection/: Cargo.toml  build.rs
examples/grpc-reflection/proto/grpc/reflection/v1/: reflection.proto
examples/grpc-reflection/proto/grpc/reflection/v1alpha/: reflection.proto
examples/grpc-reflection/src/: lib.rs  service.rs  service_v1alpha.rs
examples/grpc-reflection/tests/: handlers.rs
specs/: buffa-reflect-design.md  buffa-reflect-dynamic-design.md  buffa-reflect-dynamic-impl-plan.md  buffa-reflect-grpc-design.md  buffa-reflect-impl-plan.md  buffa-reflect-json-design.md  buffa-reflect-phase2-prd.md  buffa-reflect-prd.md  buffa-reflect-text-design.md  buffa-reflect-views-design.md  index.md
