[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/buffa-reflect"
repository = "https://github.com/tyrchen/buffa-reflect"
homepage = "https://github.com/tyrchen/buffa-reflect"
readme = "README.md"

[workspace.dependencies]
# external
anyhow = "1.0.98"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.17", default-features = false, features = [
  "default-hasher",
] }
logos = "0.16"
proc-macro2 = "1"
prost = "0.14"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde-value = "0.7"
serde_json = "1"
syn = { version = "2", features = ["full"] }
tempfile = "3"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-build = "0.14"
trybuild = "1"

# buffa from crates.io (vendors/ is reference-only)
buffa = { version = "0.4", default-features = false, features = ["std"] }
buffa-build = { version = "0.4" }
buffa-codegen = { version = "0.4" }
buffa-descriptor = { version = "0.4" }
buffa-types = { version = "0.4" }

# this workspace
buffa-reflect = { path = "crates/buffa-reflect" }
buffa-reflect-build = { path = "crates/buffa-reflect-build" }
buffa-reflect-derive = { path = "crates/buffa-reflect-derive" }
