[package]
name = "buffa-reflect-example"
description = "End-to-end example demonstrating buffa-reflect from build.rs through main.rs."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "buffa-reflect-example"
path = "src/main.rs"

[[example]]
name = "dynamic_message"
path = "examples/dynamic_message.rs"

[[example]]
name = "json"
path = "examples/json.rs"

[[example]]
name = "text_format"
path = "examples/text_format.rs"

[[example]]
name = "view_reflection"
path = "examples/view_reflection.rs"

[dependencies]
buffa.workspace = true
buffa-reflect = { workspace = true, features = ["serde", "text-format"] }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
buffa-reflect-build.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
