[package]
name = "buffa-reflect-derive"
description = "Proc-macro derive for buffa-reflect's ReflectMessage trait."
categories = ["development-tools"]
keywords = ["protobuf", "reflection", "buffa", "derive"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
trybuild.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
