[package]
name = "buffa-reflect"
description = "Runtime reflection for the buffa protobuf implementation."
categories = ["development-tools", "encoding"]
keywords = ["protobuf", "reflection", "buffa", "descriptor"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[features]
default = ["derive"]
derive = ["dep:buffa-reflect-derive"]

[dependencies]
buffa.workspace = true
buffa-descriptor.workspace = true
buffa-reflect-derive = { workspace = true, optional = true }
hashbrown.workspace = true
thiserror.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
